Build as React application

--- a/src/app/components/DocPage/DocPage.scss
+++ b/src/app/components/DocPage/DocPage.scss
@@ -24,7 +24,7 @@
             display: flex;
             align-items: center;
 
-            color: var(--www-text-content-color);
+            color: var(--text-content-color);
 
             &-icon {
                 margin-right: 6px;
