--- a/src/app/components/MiniToc/MiniToc.scss
+++ b/src/app/components/MiniToc/MiniToc.scss
@@ -15,7 +15,7 @@
             display: block;
             padding-left: 12px;
 
-            color: var(--www-text-content-color);
+            color: var(--text-content-color);
             border-left: 2px solid transparent;
             text-decoration: none;
 
