fix(includers/openapi): fix long text

--- a/src/services/includers/batteries/openapi/plugin/public/sandbox.scss
+++ b/src/services/includers/batteries/openapi/plugin/public/sandbox.scss
@@ -10,6 +10,10 @@
     text-align: initial;
 }
 
+.yfm-sandbox-card {
+    overflow-x: auto;
+}
+
 .yfm-sandbox .yfm-sandbox-pre {
     margin: 0;
 }
