feat(includers/openapi): add ClipboardButton response body

--- a/src/services/includers/batteries/openapi/plugin/public/sandbox.scss
+++ b/src/services/includers/batteries/openapi/plugin/public/sandbox.scss
@@ -11,6 +11,10 @@
         text-align: initial;
     }
 
+    &__card-wrapper {
+        position: relative;
+    }
+
     &__card {
         overflow-x: auto;
     }
@@ -29,5 +33,16 @@
 
     & &__possible-reasons {
         margin-top: 15px;
+    }
+
+    &__clipboard-button {
+        position: absolute;
+        top: 16px;
+        right: 16px;
+        display: none;
+    }
+
+    &__card-wrapper:hover &__clipboard-button {
+        display: block;
     }
 }
